--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ i {
 section > div > span {
   position: absolute;
   display: none;
+  pointer-events: none;
   width: 20px;
   height: 20px;
   border-radius: 75px;
